@@ -71,6 +71,7 @@ private:
 
 private Q_SLOTS:
 
+    void slotSidecarFileNameToggled(bool);
     void slotExifAutoRotateToggled(bool);
     void slotClearMetadataToggled(bool);
     void slotWriteRawFilesToggled(bool);
